ECMS-3142 fix for problem broken ui on advance search

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -856,6 +856,20 @@
 .UIJCRExplorerPortlet .UISearchContainer .ConstraintOption .IconConstraint {
 	cursor: pointer;
 }
+
+.UIJCRExplorerPortlet #UIECMSearch {
+	padding: 8px;
+	height: auto;
+}
+
+.UIJCRExplorerPortlet #UIECMSearch .TabsContainer {
+	border-bottom: 1px solid #AEAEAE;
+}
+
+.UIJCRExplorerPortlet #UIECMSearch .UITabContentContainer .UITabContent {
+	background: #ffffff;
+}
+
 /*================================UIConstraintsForm=================================*/
 
 /*================================UIMetadataSelectForm=================================*/
